<resources>
    <string name="app_name">AJR Mobile</string>
    <string name="name">Name</string>
    <string name="phonenum">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="language">Language</string>
    <string name="cost">Daily Cost</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="about_me">About Me</string>
    <string name="account">My Account</string>
    <string name="loading_txt">Loading...</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="my_rating">My Rating</string>
    <string name="my_transaction">ORDER</string>
    <string name="my_rate">RATE</string>
    <string name="my_rank">RANK</string>
    <string name="upcoming">UPCOMING ORDER</string>
    <string name="hint_upcoming">Your transaction in the next 3 days</string>
    <string name="availability">Availability</string>
    <string name="history">Order</string>
    <string name="pass">Change Password</string>
    <string name="newpass">New Password</string>
    <string name="newest">Newest Rating</string>
    <string name="rating">Rating</string>
    <string name="avg_rating">Average</string>
    <string name="all_rating">All Reviews</string>
    <string name="id_tr">Transaction Id</string>
    <string name="date_tr">Date</string>
    <string name="date_rent">Date Renting</string>
    <string name="cust_name">Customer Name</string>
    <string name="cs_name">CS Name</string>
    <string name="plat">Car Id</string>
    <string name="salary">Salary</string>
    <string name="ordrby">Order by:</string>
    <string name="report">AJR Report</string>
    <string name="carreport">Car</string>
    <string name="incomereport">Income</string>
    <string name="driverreport">Driver</string>
    <string name="topdriver">TOP 5 Driver</string>
    <string name="topcust">TOP 5 Customer</string>
    <string name="ldbrd">Leaderboard</string>
    <string name="reporttitle1">Income Detail Report</string>
    <string name="reporttitle2">Car Rental Report</string>
    <string name="reporttitle3">Driver Performance Report</string>
    <string name="reporttitle4">Most Transaction Report</string>
    <string name="header1">Customer</string>
    <string name="header2">Type</string>
    <string name="header3">Transaction</string>
    <string name="header4">Amount</string>
    <string name="header5">Income</string>
    <string name="header6">Id</string>
    <string name="header7">Amount of Transaction</string>
    <string name="header8">Amount of Rent</string>
    <string name="header9">Average Rating</string>
    <string name="promo">Promo</string>
    <string name="type">Type</string>
    <string name="fuel">Fuel</string>
    <string name="trans">Transmission</string>
    <string name="baggage">Baggage</string>
    <string name="fasil">Facility</string>
    <string name="color">Color</string>
    <string name="car">Car</string>
</resources>