<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle"
    android:backgroundTint="@color/yellow_transparent"
    tools:context=".driver.RatingActivity">

    <LinearLayout
        android:id="@+id/ll_data1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="left|center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:src="@drawable/ajr_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="left|center"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sts_akun"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:textAlignment="center"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="right|center"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        app:icon="@drawable/ic_baseline_save" />

    <Button
        android:id="@+id/btn_edit"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="right|center"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        app:icon="@drawable/ic_baseline_edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="left|center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_name"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthdate"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/tf_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="none"
                android:layout_marginBottom="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenum"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_phonenum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="none"
                android:layout_marginBottom="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_cost"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/cb_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/indigo"
            android:textColor="@color/indigo"
            android:text="@string/pass"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpass"
            android:textColorHint="@color/indigo"
            app:boxStrokeColor="@color/indigo"
            app:hintTextColor="@color/indigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_newpass"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:visibility="gone" />
</RelativeLayout>