<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ajr_logo"
        android:contentDescription="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ajr_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="290dp"
        android:text="@string/app_name"
        android:textColor="@color/indigo"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="@+id/ajr_logo"
        app:layout_constraintStart_toStartOf="@+id/ajr_logo"
        app:layout_constraintTop_toBottomOf="@+id/ajr_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/indigo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="10dp"
        app:boxStrokeColor="@color/indigo"
        app:hintTextColor="@color/indigo"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/indigo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="410dp"
        app:boxStrokeColor="@color/indigo"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/indigo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:layout_marginHorizontal="40dp"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@color/ajr_color"
            android:textColor="@color/indigo"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/login" />
    </LinearLayout>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:visibility="gone" />

</RelativeLayout>