<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle"
    android:backgroundTint="@color/yellow_transparent"
    tools:context=".manager.IncomeReportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/reporttitle3"
        android:textColor="@color/indigo"
        android:textSize="20dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:hint="Month"
        android:gravity="left|center"
        android:textColorHint="@color/indigo"
        app:boxStrokeWidth="0dp"
        app:boxStrokeColor="@color/yellow_transparent"
        app:hintTextColor="@color/indigo">

        <AutoCompleteTextView
            android:id="@+id/tf_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="none"
            android:textColor="@color/black"
            android:textSize="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="115dp"
        android:gravity="right|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_print"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center"
            android:gravity="center"
            android:layout_marginRight="10dp"
            app:icon="@drawable/ic_baseline_print" />

        <Button
            android:id="@+id/btn_go"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Go"
            android:backgroundTint="@color/indigo"
            android:textColor="@color/yellow"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/indigo_transparent"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/driverreport"
                android:textColor="@color/indigo"
                android:textSize="12dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/header6"
                    android:textColor="@color/indigo"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/indigo"
                    android:textSize="12dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/header7"
            android:textColor="@color/indigo"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/header9"
            android:textColor="@color/indigo"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sr_driver"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_driver_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/rv_report" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>